# champ

champ_base/src/: quadruped_controller.cpp
champ_bringup/launch/: bringup.launch.py
champ_gazebo/: CMakeLists.txt  package.xml
champ_gazebo/launch/: gazebo.launch.py
champ_gazebo/src/: contact_sensor.cpp
